// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/Notice Exemple 1`] = `
<div
  className="fr-notice fr-notice--info"
>
  <div
    className="fr-container"
  >
    <div
      className="fr-notice__body"
    >
      <p
        className="fr-notice__title"
      >
        Titre du bandeau
      </p>
      <button
        className="fr-btn--close fr-btn"
        onClick={[Function]}
        title="Masquer le message"
      >
        Masquer le message
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/Notice Exemple Alert 1`] = `
<div
  className="fr-notice fr-notice--info"
  style={
    Object {
      "backgroundColor": "#FFE8E5",
      "color": "#B34000",
    }
  }
>
  <div
    className="fr-container"
  >
    <div
      className="fr-notice__body"
    >
      <p
        className="fr-notice__title"
      >
        Titre du bandeau
      </p>
      <button
        className="fr-btn--close fr-btn"
        onClick={[Function]}
        title="Masquer le message"
      >
        Masquer le message
      </button>
    </div>
  </div>
</div>
`;
